Update Task-1 .html

--- a/Task-1/Task-1 .html
+++ b/Task-1/Task-1 .html
@@ -31,6 +31,6 @@
         <ul>
             <li>Tuseday, February 20 at 12:59</li>
         </ul>
-<img decoding="async" src="/imgs/messi-world-cup-trophy-wallpapers-5.jpg" alt="/imgs/wp10951957.jpg" width="450px">
+<img decoding="async" src="https://tse4.mm.bing.net/th?id=OIP.dTDR7N0a9MFuru5oWiRfugHaE_&pid=Api&P=0&h=220" alt="img" width="450px">
     </body>
 </html>
